--- a/.editorconfig
+++ b/.editorconfig
@@ -28,6 +28,9 @@ insert_final_newline = true
 indent_size = 4
 charset = utf-8-bom
 
+# CA2237: Mark ISerializable types with serializable
+dotnet_diagnostic.CA2237.severity = silent
+
 [*.sql]
 trim_trailing_whitespace = false
 
