--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -205,6 +205,10 @@
     <Compile Include="Migrations\202004222034519_PhoneFullNumber23.Designer.cs">
       <DependentUpon>202004222034519_PhoneFullNumber23.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004241822284_CommunicationRecipientResponseCode.cs" />
+    <Compile Include="Migrations\202004241822284_CommunicationRecipientResponseCode.Designer.cs">
+      <DependentUpon>202004241822284_CommunicationRecipientResponseCode.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 10.0\Version 1.10.2\202002042011136_Rollup_0220.cs" />
     <Compile Include="Migrations\Version 10.0\Version 1.10.2\202002042011136_Rollup_0220.Designer.cs">
       <DependentUpon>202002042011136_Rollup_0220.cs</DependentUpon>
@@ -1294,6 +1298,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202004222034519_PhoneFullNumber23.resx">
       <DependentUpon>202004222034519_PhoneFullNumber23.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004241822284_CommunicationRecipientResponseCode.resx">
+      <DependentUpon>202004241822284_CommunicationRecipientResponseCode.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 10.0\Version 1.10.2\202002042011136_Rollup_0220.resx">
       <DependentUpon>202002042011136_Rollup_0220.cs</DependentUpon>
