--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -491,6 +491,7 @@
     <Compile Include="Logging\RockLogEvent.cs" />
     <Compile Include="Logging\RockLogSystemSettings.cs" />
     <Compile Include="Logging\RockSerilogReader.cs" />
+    <Compile Include="Model\CommunicationRecipientResponseCode.cs" />
     <Compile Include="Model\GroupSyncService.Partial.cs" />
     <Compile Include="Plugin\HotFixes\105_PageParameterFilterBlock.cs" />
     <Compile Include="Plugin\HotFixes\104_MigrationRollupsFor10_3_0.cs" />
