- Refactor all email components to use the same source so that a fix to one fixes them all.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -481,6 +481,8 @@
     <Compile Include="Blocks\Types\Mobile\Prayer\PrayerRequestDetails.cs" />
     <Compile Include="Blocks\Types\Mobile\Prayer\PrayerSession.cs" />
     <Compile Include="Blocks\Types\Mobile\Prayer\PrayerSessionSetup.cs" />
+    <Compile Include="Communication\Transport\EmailSendResponse.cs" />
+    <Compile Include="Communication\EmailTransportComponent.cs" />
     <Compile Include="Communication\Transport\MailTransportHelper.cs" />
     <Compile Include="Communication\CommunicationTemplateHelper.cs" />
     <Compile Include="Field\Types\ConnectionRequestActivityFieldType.cs" />
