--- a/Rock.SendGrid/Rock.SendGrid.csproj
+++ b/Rock.SendGrid/Rock.SendGrid.csproj
@@ -44,6 +44,7 @@
       <HintPath>..\packages\SendGrid.9.14.1\lib\net452\SendGrid.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -54,10 +55,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UAParser, Version=3.1.44.0, Culture=neutral, PublicKeyToken=f7377bf021646069, processorArchitecture=MSIL">
+      <HintPath>..\packages\UAParser.3.1.44\lib\net45\UAParser.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Communications\Transport\SendGridHttp.cs" />
+    <Compile Include="Webhook\SendGridEvent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
