--- a/Rock.SendGrid/packages.config
+++ b/Rock.SendGrid/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="SendGrid" version="9.14.1" targetFramework="net452" />
+  <package id="UAParser" version="3.1.44" targetFramework="net452" />
 </packages>
