--- a/Rock.SendGrid/Rock.SendGrid.csproj
+++ b/Rock.SendGrid/Rock.SendGrid.csproj
@@ -60,6 +60,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Rock.Version\AssemblySharedInfo.cs">
+      <Link>AssemblySharedInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Communications\Transport\SendGridHttp.cs" />
     <Compile Include="Webhook\SendGridEvent.cs" />
